--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gestión de Causas</title>
+  <title>Administracion de Causas</title>
   <style>
     /* ====== Estilos generales ====== */
     :root{
@@ -97,9 +97,7 @@
   </style>
 </head>
 <body>
-  <h1>📑 Causas registradas</h1>
-
-  <div class="container">
+    <div class="container">
     <div class="main">
       <div class="top-actions">
         <div class="filters">
