--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       padding:8px 12px;border:1px solid #ddd;border-radius:10px;background:#fff;font-size:.9rem
     }
 
-    .btn{border:none;padding:8px 12px;border-radius:8px;cursor:pointer;font-size:.85rem;transition:.2s}
+    .btn{border:none;padding:10px 12px;border-radius:8px;cursor:pointer;font-size:.9rem;transition:.2s;white-space:nowrap;line-height:1.2}
     .btn:hover{opacity:.9}
     .btn-nuevo{background:var(--accent);color:#fff}
     .btn-print{background:var(--success);color:#fff}
@@ -36,15 +36,18 @@
     .btn-ghost{background:#eef2f7;color:#2c3e50}
 
     /* Tabs */
-    .tabs{display:flex;gap:8px;margin-bottom:10px}
+    .tabs{display:flex;gap:8px;margin-bottom:10px;flex-wrap:wrap}
     .tab{padding:8px 12px;border-radius:8px;background:#eef2f7;cursor:pointer;font-size:.88rem}
     .tab.active{background:var(--primary);color:#fff}
     .tab-note{font-size:.8rem;color:var(--muted);margin-left:6px}
 
     /* Tablas */
-    .table-wrap{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:auto}
+    .table-wrap{
+      background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);
+      overflow:auto;-webkit-overflow-scrolling:touch
+    }
     table{width:100%;border-collapse:collapse;min-width:720px}
-    th,td{padding:10px;border-bottom:1px solid #eee;text-align:left;font-size:.9rem}
+    th,td{padding:10px;border-bottom:1px solid #eee;text-align:left;font-size:.9rem;vertical-align:top;word-break:break-word}
     th{background:var(--primary);color:#fff;position:sticky;top:0;z-index:1}
     tr:hover td{background:#f9fbff}
     .nowrap{white-space:nowrap}
@@ -94,6 +97,36 @@
     .btn-add{background:var(--success);color:#fff;border:none;padding:8px 12px;border-radius:8px;cursor:pointer}
     .btn-delete{background:var(--danger);color:#fff;border:none;padding:8px 12px;border-radius:8px;cursor:pointer}
     .btn-add:hover,.btn-delete:hover{opacity:.9}
+
+    /* ====== Accesibilidad mínima ====== */
+    :focus-visible{outline:2px solid var(--accent);outline-offset:2px;border-radius:8px}
+
+    /* ====== RESPONSIVE ====== */
+    /* Tablet y menores: sidebar bajo la tabla, 1 columna */
+    @media (max-width: 1024px){
+      .container{grid-template-columns:1fr}
+      .sidebar{position:relative;top:unset;order:-1}
+    }
+    /* Tablet angosta y móviles: apilar filtros/botones y dar ancho completo */
+    @media (max-width: 768px){
+      body{padding:12px}
+      .top-actions{flex-direction:column;align-items:stretch}
+      .filters{width:100%}
+      .filters input[type="text"], .filters select.simple{flex:1;min-width:160px}
+      .actions{display:flex;gap:8px;flex-wrap:wrap;width:100%}
+      .btn{flex:1;text-align:center}
+      .tabs{gap:6px}
+      #modal .content,#modalVer .content{max-width:100%;border-radius:10px}
+    }
+    /* Móviles chicos */
+    @media (max-width: 480px){
+      h1{font-size:1.25rem}
+      .tab{flex:1;text-align:center;padding:10px}
+      table{min-width:600px} /* scroll horizontal suave en móviles */
+      th,td{padding:8px}
+      .controls-form{flex-direction:column}
+      .btn{width:100%}
+    }
   </style>
 </head>
 <body>
