--- a/index.html
+++ b/index.html
@@ -495,8 +495,8 @@
     Civil: ["Juzgado Civil y Comercial N° 1 - Posadas","Juzgado Civil y Comercial N° 2 - Posadas","Juzgado Civil y Comercial N° 3 - Posadas","Juzgado Civil y Comercial N° 4 - Posadas","Juzgado Civil y Comercial N° 5 - Posadas","Juzgado Civil y Comercial N° 6 - Posadas","Juzgado Civil y Comercial N° 7 - Posadas","Juzgado Civil y Comercial N° 1 - Oberá","Juzgado Civil y Comercial N° 2 - Oberá","... Civil Comercial Laboral Familia y Violencia Fliar- Apostoles"],
     Penal: ["Juzgado de Instrucción N° 1 - Posadas","Juzgado Correccional y de Menores N° 1 - Posadas","Juzgado Correccional y de Menores N° 2 - Posadas"],
     Laboral: ["Juzgado Laboral N° 1 - Posadas","Juzgado Laboral N° 2 - Posadas","Juzgado Laboral N° 3 - Posadas","Juzgado Laboral N° 4 - Posadas"],
-    Familia: ["Juzgado de Familia N° 1 - Posadas","Juzgado de Familia N° 2 - Posadas","... Civil Comercial Laboral Familia y Violencia Fliar- Apostoles"],
-    "Violencia Familiar": ["Juzgado de Violencia Familiar N° 1 - Posadas","Juzgado de Violencia Familiar N° 2 - Posadas","... Civil Comercial Laboral Familia y Violencia Fliar- Apostoles"],
+    Familia: ["Juzgado de Familia N° 1 - Posadas","Juzgado de Familia N° 2 - Posadas","Juzgado Familia y VF Garupa", "... Civil Comercial Laboral Familia y Violencia Fliar- Apostoles"],
+    "Violencia Familiar": ["Juzgado de Violencia Familiar N° 1 - Posadas","Juzgado de Violencia Familiar N° 2 - Posadas","Juzgado F y Violencia Familiar Garupa","... Civil Comercial Laboral Familia y Violencia Fliar- Apostoles"],
     Paz: ["Juzgado de Paz Civil Comercial N° 1 - Posadas","Juzgado de Paz - San José","Juzgado de Paz - San Martín","Juzgado de Paz - Santa Ana","Juzgado de Paz - San María","Juzgado de Paz - Tres Capones"]
   };
 
