--- a/index.html
+++ b/index.html
@@ -135,10 +135,6 @@
       <div class="group"><div class="k">Vencimientos <span class="pill" id="countVenc">0</span></div><div id="listVenc"></div></div>
       <div class="group"><div class="k">Venc. de Recursos <span class="pill" id="countVrec">0</span></div><div id="listVrec"></div></div>
       <button id="btnPrintFechas" class="btn btn-print" style="margin-top:8px;width:100%"><i class="fa fa-print"></i>Imprimir Fechas</button>
-      <div class="group">
-        <h2>📓 Seguimiento de actuaciones judiciales</h2>
-        <div id="bitacoraSidebar"><i>Seleccione una causa para ver su bitácora</i></div>
-      </div>
     </aside>
   </div>
 
@@ -201,17 +197,10 @@
       </div>
       <div class="modal-body">
         <div id="verContenido"></div>
-        <div id="bitacoraSection" style="margin-top:20px">
-          <h3>📓 Seguimiento de actuaciones judiciales</h3>
-          <div id="listBitacora"></div>
-          <textarea id="nuevaNota" placeholder="Escribe una nota..." style="width:100%;margin-top:10px"></textarea>
-          <button id="btnAgregarNota" class="btn btn-nuevo" style="margin-top:8px"><i class="fa fa-plus"></i>Agregar Nota</button>
-        </div>
       </div>
       <div class="controls-form" style="justify-content:flex-end;">
         <button id="btnCerrarVer" class="btn btn-ghost"><i class="fa fa-xmark"></i>Cerrar</button>
         <button id="btnPrintRegistro" class="btn btn-print"><i class="fa fa-print"></i>Imprimir Registro</button>
-        <button id="btnPrintBitacora" class="btn btn-print"><i class="fa fa-print"></i>Imprimir Bitácora</button>
       </div>
     </div>
   </div>
@@ -293,8 +282,6 @@
   let datosCache = [];
   let causaActualId = null;
   let unsubCausas = null;
-  let unsubBitacoraModal = null;
-  let unsubBitacoraSidebar = null;
 
   // ===== Realtime: causas =====
   function suscribirCausas(){
@@ -351,7 +338,7 @@ function accionesHTML(id){
     return `<button class="btn-view" data-id="${id}" title="Ver"><i class="fa fa-eye"></i></button>
             <button class="btn-edit" data-id="${id}" title="Editar"><i class="fa fa-pen"></i></button>
             <button class="btn-delete" data-id="${id}" title="Eliminar"><i class="fa fa-trash"></i></button>
-            <a href="linea-tiempo.html?id=${id}" class="btn-view-bitacora" title="Ver Línea de Tiempo"><i class="fa-solid fa-timeline"></i></a>`;
+            <a href="https://defensoria6.github.io/linea-tiempo/?id=${id}" class="btn-view" title="Ver Línea de Tiempo"><i class="fa-solid fa-timeline"></i></a>`;
 }
 
   function renderTablas(data){
@@ -404,8 +391,6 @@ function accionesHTML(id){
     document.querySelectorAll(".btn-view").forEach(b=>b.onclick=()=>abrirVer(b.dataset.id));
     document.querySelectorAll(".btn-edit").forEach(b=>b.onclick=()=>abrirEditar(b.dataset.id));
     document.querySelectorAll(".btn-delete").forEach(b=>b.onclick=()=>eliminar(b.dataset.id));
-    // CORRECCIÓN: Llamada a la bitácora de la barra lateral solo si es necesario.
-    document.querySelectorAll(".btn-view-bitacora").forEach(b=>b.onclick=()=>abrirBitacoraSidebar(b.dataset.id));
   }
 
   // ===== Sidebar (eventos próximos) =====
@@ -488,36 +473,7 @@ function accionesHTML(id){
       const pares = Object.entries(d||{}).filter(([k,v])=>v);
       verContenido.innerHTML = pares.map(([k,v])=>`<p><strong>${k}:</strong> ${v?.seconds?fmt(v):v}</p>`).join("");
       modalVer.style.display = "flex";
-      abrirBitacoraSidebar(id);
-      suscribirBitacoraModal(id);
     }catch(e){ console.error(e); alert("No se pudo abrir el detalle"); }
-  }
-
-  function suscribirBitacoraModal(id){
-    if (unsubBitacoraModal) unsubBitacoraModal();
-    causaActualId = id;
-    unsubBitacoraModal = db.collection("causas").doc(id).collection("seguimiento").orderBy("fecha","asc").onSnapshot(snap=>{
-      const listBitacora = $("listBitacora");
-      listBitacora.innerHTML = "";
-      if (snap.empty){ listBitacora.innerHTML = "<i>No hay notas registradas</i>"; return; }
-      snap.forEach(doc=>{
-        const n = doc.data(); const f = n.fecha?.seconds ? fmt(n.fecha) : "";
-        listBitacora.insertAdjacentHTML("beforeend", `<div class="note"><div><b>${n.usuario||"Anon"}:</b> ${n.texto}</div><small style="color:#7f8c8d">${f}</small></div>`);
-      });
-    });
-  }
-
-  async function abrirBitacoraSidebar(id){
-    if (unsubBitacoraSidebar) unsubBitacoraSidebar();
-    causaActualId = id;
-    unsubBitacoraSidebar = db.collection("causas").doc(id).collection("seguimiento").orderBy("fecha","asc").onSnapshot(snap=>{
-      const side = $("bitacoraSidebar"); side.innerHTML = "";
-      if (snap.empty){ side.innerHTML = "<i>No hay notas en esta causa</i>"; return; }
-      snap.forEach(doc=>{
-        const n = doc.data(); const f = n.fecha?.seconds ? fmt(n.fecha) : "";
-        side.insertAdjacentHTML("beforeend", `<div class="note" style="border-left-color:#1f3a93"><div><b>${n.usuario||"Anon"}:</b> ${n.texto}</div><small style="color:#7f8c8d">${f}</small></div>`);
-      });
-    });
   }
 
   $("btnCerrarVer").onclick = ()=> modalVer.style.display = "none";
@@ -528,7 +484,6 @@ function accionesHTML(id){
   $("btnPrintFechas").onclick = ()=>{ const html = `<h3>Audiencias</h3>${listAud.outerHTML}<h3>Cámara Gesell</h3>${listGes.outerHTML}<h3>Vencimientos</h3>${listVenc.outerHTML}<h3>Venc. de Recursos</h3>${listVrec.outerHTML}`; printSection(html); };
   $("btnPrintForm").onclick = ()=> printSection($("formCausa").outerHTML);
   $("btnPrintRegistro").onclick = ()=> printSection($("verContenido").outerHTML);
-  $("btnPrintBitacora").onclick = ()=> printSection($("bitacoraSection").outerHTML);
 
   // ===== Form =====
   const juzgadosPorTipo = {
@@ -564,10 +519,10 @@ function accionesHTML(id){
     else { datosNnya.value = ""; datosNnya.setAttribute("disabled","true"); contadorNnya.style.display='none'; }
   });
 
-  const limitWords = (text, max)=>{ const words = text.trim().split(/\\s+/).filter(Boolean); return words.length > max ? words.slice(0,max).join(" ") : text; };
-  $("observaciones").addEventListener("input", function(){ this.value = limitWords(this.value, 1000); $("counter").textContent = `${this.value.trim().split(/\\s+/).filter(Boolean).length}/1000`; });
-  $("datosNnya").addEventListener("input", function(){ this.value = limitWords(this.value, 500); $("counterNnya").textContent = `${this.value.trim().split(/\\s+/).filter(Boolean).length}/500`; });
-  $("nnyaGesell").addEventListener("input", function(){ this.value = limitWords(this.value, 400); $("counterNnyaGesell").textContent = `${this.value.trim().split(/\\s+/).filter(Boolean).length}/400`; });
+  const limitWords = (text, max)=>{ const words = text.trim().split(/\s+/).filter(Boolean); return words.length > max ? words.slice(0,max).join(" ") : text; };
+  $("observaciones").addEventListener("input", function(){ this.value = limitWords(this.value, 1000); $("counter").textContent = `${this.value.trim().split(/\s+/).filter(Boolean).length}/1000`; });
+  $("datosNnya").addEventListener("input", function(){ this.value = limitWords(this.value, 500); $("counterNnya").textContent = `${this.value.trim().split(/\s+/).filter(Boolean).length}/500`; });
+  $("nnyaGesell").addEventListener("input", function(){ this.value = limitWords(this.value, 400); $("counterNnyaGesell").textContent = `${this.value.trim().split(/\s+/).filter(Boolean).length}/400`; });
 
   $("habilitarAudienciaGesell").addEventListener("change", function(){ toggleGesell(this.checked); });
   function toggleGesell(enabled){ const ag = $("audienciaGesell"); const ng = $("nnyaGesell"); if (enabled){ ag.removeAttribute("disabled"); ng.removeAttribute("disabled"); $("counterNnyaGesell").style.display='block'; } else { ag.value = ""; ng.value = ""; ag.setAttribute("disabled","true"); ng.setAttribute("disabled","true"); $("counterNnyaGesell").style.display='none'; } }
@@ -600,18 +555,6 @@ function accionesHTML(id){
   btnToggleVista.onclick = ()=>activateTab(wrapCompacta.style.display!=="none");
 
   poblarFiltroUsuarios([]);
-
-  // ===== Bitácora: agregar nota =====
-  $("btnAgregarNota").onclick = async ()=>{
-    if(!causaActualId){ alert("Seleccione una causa antes de agregar una nota"); return; }
-    const texto = $("nuevaNota").value.trim();
-    if(!texto){ alert("Escribe una nota"); return; }
-    try{
-      await db.collection("causas").doc(causaActualId).collection("seguimiento").add({texto, usuario:"Defensoría", fecha: firebase.firestore.FieldValue.serverTimestamp()});
-      $("nuevaNota").value = "";
-    }catch(e){ console.error("Error al guardar nota:", e); alert("No se pudo guardar la nota. Intenta nuevamente."); }
-    return false;
-  };
 
   // Init
   let modo = "nuevo";
