--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     :root{
-      --bg:#f5f7fb; --card:#fff; --primary:#1f3a93; --accent:#3498db;
+      --bg:#a3c8ff; --card:#fff; --primary:#1f3a93; --accent:#3498db;
       --danger:#e74c3c; --success:#27ae60; --warning:#f39c12; --muted:#7f8c8d;
       --radius:12px; --shadow:0 4px 15px rgba(0,0,0,.08); --tag:#eef2ff;
     }
