--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="field"><label for="intervencion">Intervención</label>
               <select id="intervencion">
                 <option>Ministerio Complementario</option><option>Ministerio Principal</option><option>Patrocinante Actor</option>
-                <option>Patrocinante Demandado</option><option>Patrocinante Tercero</option><option value="Defensor de Ausente">Defensor de Ausente</option><option>Patrocinante presunto incapaz</option></option><option>Patrocinante Tercero</option>
+                <option>Patrocinante Demandado</option><option>Patrocinante Tercero</option><option value="Defensor de Ausente">Defensor de Ausente</option><option>Patrocinante presunto incapaz</option></option>
                 <option value="Defensor Oficial Asesor Letrado">Asesor Letrado</option><option>Ministerio Público del incapaz</option><option>Ministerio Público en turno Abril</option><option>Ministerio Público en turno Agosto</option><option>Ministerio Público en turno Diciembre</option>    
               </select>
             </div>
